--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-safe-area-context": "^3.4.0",
     "react-native-screens": "^3.12.0",
     "react-native-searchable-dropdown": "^1.1.3",
+    "react-native-segmented-control-tab": "^4.0.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
