--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-swipeable": "^0.6.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.1.0",
+    "rn-fetch-blob": "^0.12.0",
     "toggle-switch-react-native": "^3.3.0",
     "whatwg-fetch-timeout": "^2.0.2-timeout"
   },
