--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "react": "17.0.2",
+    "react-native": "0.68.5",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/checkbox": "^0.5.9",
@@ -25,8 +27,6 @@
     "buffer": "^6.0.3",
     "crypto-js": "^4.1.1",
     "moment": "^2.29.1",
-    "react": "17.0.2",
-    "react-native": "0.67.2",
     "react-native-animatable": "^1.3.3",
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-base64": "^0.2.1",
@@ -69,9 +69,9 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
+    "eslint": "^7.32.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.2",
+    "metro-react-native-babel-preset": "^0.67.0",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
